Fixed input field visibility

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -128,10 +128,6 @@ section.board{
     padding-right: 16px;
 }
 
-.new-board-input {
-    visibility: hidden;
-}
-
 .hidden {
     display: none;
 }
